--- a/examples/bitonic.ipynb
+++ b/examples/bitonic.ipynb
@@ -13,7 +13,11 @@
       "BitonicSort:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
-      "  Lines of generated code: 394\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 379\n",
+      "  IR Compile time: 1.165100 ms\n",
+      "  Compiler time: 1414.677856 ms\n",
       "\n"
      ]
     }
@@ -23,7 +27,7 @@
     "import TensorFrost as tf\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "#this sort is not a stable sort, beware\n",
     "def BitonicSort():\n",
@@ -51,18 +55,19 @@
     "\n",
     "        e1, e2 = getBitonicElementPair(sort_id, step)\n",
     "\n",
-    "        tf.if_cond((e1 >= N) | (e2 >= N), lambda: tf.continue_loop())\n",
+    "        def sort():\n",
+    "            key1, key2 = output[e1, 0], output[e2, 0]\n",
+    "            val1, val2 = output[e1, 1], output[e2, 1]\n",
     "\n",
-    "        key1, key2 = output[e1, 0], output[e2, 0]\n",
-    "        val1, val2 = output[e1, 1], output[e2, 1]\n",
-    "        \n",
-    "        def swap():\n",
-    "            output[e1, 0] = key2\n",
-    "            output[e2, 0] = key1\n",
-    "            output[e1, 1] = val2\n",
-    "            output[e2, 1] = val1\n",
+    "            def swap():\n",
+    "                output[e1, 0] = key2\n",
+    "                output[e2, 0] = key1\n",
+    "                output[e1, 1] = val2\n",
+    "                output[e2, 1] = val1\n",
     "\n",
-    "        tf.if_cond(key1 > key2, swap)\n",
+    "            tf.if_cond(key1 > key2, swap)\n",
+    "\n",
+    "        tf.if_cond((e1 < N) & (e2 < N), sort)\n",
     "\n",
     "    tf.loop(sortingIteration, 0, steps, 1)\n",
     "\n",
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
