--- a/examples/sphere_tracer.ipynb
+++ b/examples/sphere_tracer.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -282,23 +282,23 @@
       "Frame 56 rendered\n",
       "Frame 57 rendered\n",
       "Frame 58 rendered\n",
-      "Frame 59 rendered\n",
-      "Frame 60 rendered\n",
-      "Frame 61 rendered\n"
+      "Frame 59 rendered\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17976\\1700344769.py:20: RuntimeWarning: invalid value encountered in cast\n",
-      "  writer.append_data((np.clip(render,0.0,1.0) * 255).astype(np.uint8))\n"
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17976\\2559193286.py:46: RuntimeWarning: invalid value encountered in cast\n",
+      "  video.write((np.clip(render,0.0,1.0) * 255).astype(np.uint8))\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Frame 60 rendered\n",
+      "Frame 61 rendered\n",
       "Frame 62 rendered\n",
       "Frame 63 rendered\n",
       "Frame 64 rendered\n",
@@ -537,7 +537,7 @@
       "Frame 297 rendered\n",
       "Frame 298 rendered\n",
       "Frame 299 rendered\n",
-      "FPS: 41.146208021614484\n"
+      "FPS: 44.411828403608254\n"
      ]
     }
    ],
@@ -577,7 +577,7 @@
     "#use opencv to write is as video too\n",
     "video_path = 'H:/TestVideos/ray_marching_test.mp4'\n",
     "fourcc = cv.VideoWriter_fourcc(*'H264')\n",
-    "video = cv.VideoWriter(video_path, fourcc, 24, (1024, 1024))\n",
+    "video = cv.VideoWriter(video_path, fourcc, 60, (1024, 1024))\n",
     "\n",
     "N = 300\n",
     "\n",
