Fix replacing dim nodes

--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QRDecomposition:\n",
+      "  Kernel count: 8\n",
+      "  Intermediate buffers: 0\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 380\n",
+      "  IR Compile time: 1.406200 ms\n",
+      "  Compiler time: 1397.747803 ms\n",
+      "\n"
      ]
     }
    ],
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -117,20 +121,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.0455030687293702e-16\n",
-      "Error using TensorFrost: 1.5633102105507665e-07\n",
+      "Error: 2.7194799110210365e-16\n",
+      "Error using TensorFrost: 1.5662274272136344e-07\n",
       "Q:\n",
-      " [[ 0.3298439  -0.08305611  0.6041489   0.610576   -0.38276058]\n",
-      " [ 0.5601509  -0.15078218 -0.2818219  -0.4372105  -0.6268323 ]\n",
-      " [ 0.37948206  0.46724573 -0.59020483  0.52254176  0.12760521]\n",
-      " [ 0.24615958  0.76182884  0.4385284  -0.3923058   0.11318787]\n",
-      " [ 0.61060035 -0.41432428  0.12219474 -0.09534304  0.6568721 ]]\n",
+      " [[ 0.54192245 -0.17930706  0.05088069  0.53365797 -0.62192476]\n",
+      " [ 0.5606052  -0.00573589 -0.72329813 -0.39186203  0.09472359]\n",
+      " [ 0.41877577  0.09804496  0.6408385  -0.6196689  -0.14265572]\n",
+      " [ 0.46546808  0.12146514  0.23589103  0.40748566  0.739524  ]\n",
+      " [ 0.00287124  0.9713133  -0.0890642   0.10779312 -0.19232903]]\n",
       "R:\n",
-      " [[ 1.178895    0.63686347  0.4827032   1.0949109   0.8081735 ]\n",
-      " [ 0.          0.6868053   0.5349007   0.5582295   0.33716515]\n",
-      " [ 0.          0.          0.4885528   0.6341346  -0.40098333]\n",
-      " [ 0.          0.          0.          0.36366576  0.35414588]\n",
-      " [ 0.          0.          0.          0.          0.1336618 ]]\n"
+      " [[ 1.6874231   1.5225022   1.4107641   1.4653312   1.4812354 ]\n",
+      " [ 0.          0.3381863   1.0015517   0.82533884  0.2625713 ]\n",
+      " [ 0.          0.          0.29329187 -0.10041898 -0.19757228]\n",
+      " [ 0.          0.          0.          0.4280183   0.4344216 ]\n",
+      " [ 0.          0.          0.          0.          0.13880263]]\n"
      ]
     }
    ],
@@ -162,26 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 0.3587460517883301\n",
-      "Time for TensorFrost QR decomposition: 0.05401921272277832\n",
-      "Time for householder QR decomposition: 2.3992762565612793\n",
-      "Time for built-in NumPy QR decomposition: 0.05753970146179199\n",
-      "Error: 9.259274e-05\n",
-      "Error using TensorFrost: 0.00010107104\n"
+      "Time for naive NumPy QR decomposition: 2.4862899780273438\n",
+      "Time for TensorFrost QR decomposition: 0.6016838550567627\n",
+      "Time for householder QR decomposition: 25.362114191055298\n",
+      "Time for built-in NumPy QR decomposition: 0.1529991626739502\n",
+      "Error: 0.00021834458\n",
+      "Error using TensorFrost: 0.00024554724\n"
      ]
     }
    ],
    "source": [
     "#performance test\n",
     "import time\n",
-    "A = np.random.rand(500, 500).astype(np.float32)\n",
+    "A = np.random.rand(1000, 1000).astype(np.float32)\n",
     "\n",
     "#naive NumPy QR decomposition\n",
     "start = time.time()\n",
@@ -195,9 +199,9 @@
     "print(\"Time for TensorFrost QR decomposition:\", time.time() - start)\n",
     "\n",
     "#householder QR decomposition\n",
-    "start = time.time()\n",
-    "Q, R = qr_decomposition(A)\n",
-    "print(\"Time for householder QR decomposition:\", time.time() - start)\n",
+    "#start = time.time()\n",
+    "#Q, R = qr_decomposition(A)\n",
+    "#print(\"Time for householder QR decomposition:\", time.time() - start)\n",
     "\n",
     "#built-in NumPy QR decomposition\n",
     "start = time.time()\n",
