--- a/examples/random_number_generation.ipynb
+++ b/examples/random_number_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,11 @@
       "RNG:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
-      "  Lines of generated code: 278\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 364\n",
+      "  IR Compile time: 0.183700 ms\n",
+      "  Compiler time: 1368.121826 ms\n",
       "\n",
       "[ 129708002 2831084092 2055130248 2131687100  678955108 2161170183\n",
       " 4048597412 2120684060  460041413 1301776676 1879086465 1170772408\n",
@@ -30,7 +34,7 @@
     "import TensorFrost as tf\n",
     "import numpy as np\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "N = 16\n",
     "\n",
