Fix performance issues

--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 624\n",
-      "  IR Compile time: 1.331300 ms\n",
-      "  Compiler time: 1338.299805 ms\n",
+      "  Lines of generated code: 380\n",
+      "  IR Compile time: 1.398800 ms\n",
+      "  Compiler time: 1286.123413 ms\n",
       "\n"
      ]
     }
@@ -25,7 +26,7 @@
     "import numpy as np\n",
     "import TensorFrost as tf\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "def modified_gram_schmidt(A):\n",
     "    \"\"\"\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,20 +122,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 8.441528768080324e-17\n",
-      "Error using TensorFrost: 1.5761248947241862e-07\n",
+      "Error: 2.082824332422744e-16\n",
+      "Error using TensorFrost: 1.0082018892106065e-07\n",
       "Q:\n",
-      " [[ 0.54598135 -0.03954316  0.2870841   0.7124055   0.33226612]\n",
-      " [ 0.4686337  -0.259407   -0.82893014 -0.09886222  0.12724613]\n",
-      " [ 0.10084323  0.5460323   0.04568316 -0.40381765  0.72561926]\n",
-      " [ 0.40913475  0.70717645 -0.0804598   0.02419454 -0.5704845 ]\n",
-      " [ 0.55202    -0.36454707  0.47105923 -0.5648457  -0.14639544]]\n",
+      " [[ 0.38091305  0.222639    0.4989048   0.66270965  0.34241325]\n",
+      " [ 0.53618616  0.13078457 -0.8009207   0.16798212  0.16033772]\n",
+      " [ 0.58202857 -0.33019805  0.275919   -0.60383207  0.33386734]\n",
+      " [ 0.4550608  -0.20369923  0.13241838  0.14355807 -0.8445607 ]\n",
+      " [ 0.14687468  0.88476163  0.12630957 -0.38389552 -0.17970744]]\n",
       "R:\n",
-      " [[1.6290067  1.4283142  1.3694818  1.1229022  0.8288662 ]\n",
-      " [0.         0.55972785 0.22859307 0.21333775 0.6825928 ]\n",
-      " [0.         0.         0.6533077  0.19861342 0.036954  ]\n",
-      " [0.         0.         0.         0.44036102 0.23409095]\n",
-      " [0.         0.         0.         0.         0.01774993]]\n"
+      " [[ 1.4945498   0.75166285  1.3481821   0.6070829   1.1049578 ]\n",
+      " [ 0.          0.74253285 -0.1637654   0.12171134  0.15497686]\n",
+      " [ 0.          0.          0.44465545  0.2953384   0.30706596]\n",
+      " [ 0.          0.          0.          0.42615187  0.00387684]\n",
+      " [ 0.          0.          0.          0.          0.5385318 ]]\n"
      ]
     }
    ],
@@ -166,18 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 2.473423480987549\n",
-      "Time for TensorFrost QR decomposition: 0.47699904441833496\n",
-      "Time for built-in NumPy QR decomposition: 0.1269996166229248\n",
-      "Error: 0.00021828424\n",
-      "Error using TensorFrost: 0.0002468364\n"
+      "Time for naive NumPy QR decomposition: 2.476792097091675\n",
+      "Time for TensorFrost QR decomposition: 0.03300118446350098\n",
+      "Time for built-in NumPy QR decomposition: 0.1660017967224121\n",
+      "Error: 0.00021767916\n",
+      "Error using TensorFrost: 0.00024553723\n"
      ]
     }
    ],
