Improve ray marching example.

--- a/examples/qr.ipynb
+++ b/examples/qr.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 380\n",
-      "  IR Compile time: 1.398800 ms\n",
-      "  Compiler time: 1286.123413 ms\n",
+      "  IR Compile time: 1.871100 ms\n",
+      "  Compiler time: 1606.052368 ms\n",
       "\n"
      ]
     }
@@ -113,29 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "QR decomposition is correct: True\n",
-      "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.082824332422744e-16\n",
-      "Error using TensorFrost: 1.0082018892106065e-07\n",
-      "Q:\n",
-      " [[ 0.38091305  0.222639    0.4989048   0.66270965  0.34241325]\n",
-      " [ 0.53618616  0.13078457 -0.8009207   0.16798212  0.16033772]\n",
-      " [ 0.58202857 -0.33019805  0.275919   -0.60383207  0.33386734]\n",
-      " [ 0.4550608  -0.20369923  0.13241838  0.14355807 -0.8445607 ]\n",
-      " [ 0.14687468  0.88476163  0.12630957 -0.38389552 -0.17970744]]\n",
-      "R:\n",
-      " [[ 1.4945498   0.75166285  1.3481821   0.6070829   1.1049578 ]\n",
-      " [ 0.          0.74253285 -0.1637654   0.12171134  0.15497686]\n",
-      " [ 0.          0.          0.44465545  0.2953384   0.30706596]\n",
-      " [ 0.          0.          0.          0.42615187  0.00387684]\n",
-      " [ 0.          0.          0.          0.          0.5385318 ]]\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -167,30 +155,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for naive NumPy QR decomposition: 2.476792097091675\n",
-      "Time for TensorFrost QR decomposition: 0.03300118446350098\n",
-      "Time for built-in NumPy QR decomposition: 0.1660017967224121\n",
-      "Error: 0.00021767916\n",
-      "Error using TensorFrost: 0.00024553723\n"
+      "Time for TensorFrost QR decomposition: 0.17102670669555664\n",
+      "Time for built-in NumPy QR decomposition: 3.9039103984832764\n",
+      "Error: 0.0012286062\n",
+      "Error using TensorFrost: 0.0018778328\n"
      ]
     }
    ],
    "source": [
     "#performance test\n",
     "import time\n",
-    "A = np.random.rand(1000, 1000).astype(np.float32)\n",
+    "A = np.random.rand(5000, 5000).astype(np.float32)\n",
     "\n",
     "#naive NumPy QR decomposition\n",
-    "start = time.time()\n",
-    "Q, R = modified_gram_schmidt(A)\n",
-    "print(\"Time for naive NumPy QR decomposition:\", time.time() - start)\n",
+    "#start = time.time()\n",
+    "#Q, R = modified_gram_schmidt(A)\n",
+    "#print(\"Time for naive NumPy QR decomposition:\", time.time() - start)\n",
     "\n",
     "#TensorFrost QR decomposition\n",
     "Atf = tf.tensor(A)\n",
