Some minor fixes, move stuff around

--- a/examples/Rendering/blur.ipynb
+++ b/examples/Rendering/blur.ipynb
@@ -13,7 +13,11 @@
       "blur:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 1256\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 1331\n",
+      "  IR Compile time: 7.842600 ms\n",
+      "  Compiler time: 1325.282471 ms\n",
       "\n"
      ]
     }
