--- a/examples/Rendering/mandelbrot.ipynb
+++ b/examples/Rendering/mandelbrot.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "mandelbrot:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 361\n",
-      "  IR Compile time: 1.064400 ms\n",
-      "  Compiler time: 1391.370728 ms\n",
+      "  Lines of generated code: 367\n",
+      "  IR Compile time: 1.059500 ms\n",
+      "  Compiler time: 1392.433838 ms\n",
       "\n",
       "(2048, 2048, 3)\n"
      ]
@@ -33,7 +34,7 @@
     "S = 2048\n",
     "\n",
     "def color_func(x, o):\n",
-    "\treturn 0.5 + 0.5*tf.cos(3.0 + x*0.15 + o);\n",
+    "\treturn 0.5 + 0.5*tf.cos(3.0 + x*0.15 + o)\n",
     "\n",
     "def mandelbrot():\n",
     "    canvas = tf.zeros([S, S, 3], tf.float32)\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
