--- a/examples/Rendering/sphere_tracer.ipynb
+++ b/examples/Rendering/sphere_tracer.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "ray_marcher:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 2\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 365\n",
-      "  IR Compile time: 5.530700 ms\n",
-      "  Compiler time: 1340.727905 ms\n",
+      "  Lines of generated code: 371\n",
+      "  IR Compile time: 5.976000 ms\n",
+      "  Compiler time: 1373.146240 ms\n",
       "\n"
      ]
     }
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17976\\2559193286.py:46: RuntimeWarning: invalid value encountered in cast\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_31932\\2559193286.py:46: RuntimeWarning: invalid value encountered in cast\n",
       "  video.write((np.clip(render,0.0,1.0) * 255).astype(np.uint8))\n"
      ]
     },
@@ -537,7 +538,7 @@
       "Frame 297 rendered\n",
       "Frame 298 rendered\n",
       "Frame 299 rendered\n",
-      "FPS: 44.411828403608254\n"
+      "FPS: 51.666257702567805\n"
      ]
     }
    ],
