--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 380\n",
-      "  IR Compile time: 1.871100 ms\n",
-      "  Compiler time: 1606.052368 ms\n",
+      "  Lines of generated code: 386\n",
+      "  IR Compile time: 1.468200 ms\n",
+      "  Compiler time: 1338.116455 ms\n",
       "\n"
      ]
     }
@@ -112,18 +113,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QR decomposition is correct: True\n",
+      "QR decomposition using TensorFrost is correct: True\n",
+      "Error: 2.4196749845665633e-16\n",
+      "Error using TensorFrost: 1.7463660958911132e-07\n",
+      "Q:\n",
+      " [[ 0.12900747 -0.04633267  0.85354614  0.49868265  0.06312579]\n",
+      " [ 0.10285251  0.70631176 -0.15278302  0.3730224  -0.57276213]\n",
+      " [ 0.8699651  -0.30220303 -0.01054917 -0.19219196 -0.3387996 ]\n",
+      " [ 0.4263036   0.1968207  -0.35251665  0.42409173  0.6894963 ]\n",
+      " [ 0.18494472  0.6073811   0.35176292 -0.6287911   0.2788697 ]]\n",
+      "R:\n",
+      " [[0.7926238  1.3643625  1.2382593  0.69185907 0.9429792 ]\n",
+      " [0.         1.165894   0.6241264  0.31904197 0.7199794 ]\n",
+      " [0.         0.         0.90213925 0.46822688 0.49117544]\n",
+      " [0.         0.         0.         0.2116255  0.7114116 ]\n",
+      " [0.         0.         0.         0.         0.4332226 ]]\n"
      ]
     }
    ],
@@ -155,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for TensorFrost QR decomposition: 0.17102670669555664\n",
-      "Time for built-in NumPy QR decomposition: 3.9039103984832764\n",
-      "Error: 0.0012286062\n",
-      "Error using TensorFrost: 0.0018778328\n"
+      "Time for TensorFrost QR decomposition: 0.1770005226135254\n",
+      "Time for built-in NumPy QR decomposition: 3.8822364807128906\n",
+      "Error: 0.0012288705\n",
+      "Error using TensorFrost: 0.0018782484\n"
      ]
     }
    ],
