Add support for manual kernels
+ Some additional minor improvements

--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -9,15 +9,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
+      "TensorFrost module loaded in debug mode! Expect slow performance.\n",
       "FFT:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 375\n",
-      "  IR Compile time: 1.367000 ms\n",
-      "  Compiler time: 1368.342041 ms\n",
+      "  Lines of generated code: 390\n",
+      "  IR Compile time: 54.958302 ms\n",
+      "  Compiler time: 1334.324219 ms\n",
       "\n"
      ]
     }
@@ -61,21 +61,24 @@
     "    Im[2*i+1] = 0.0\n",
     "    \n",
     "    def fft_iteration(it):\n",
-    "        k1, k2 = getIndexPair(i, it)\n",
-    "        k3 = (k1 & ((1 << it) - 1)) * (1 << (it_num - it))\n",
-    "        alpha = - 2 * np.pi * tf.float(k3) / tf.float(N)\n",
-    "        Re1 = Re[k2]\n",
-    "        Im1 = Im[k2]\n",
-    "        Re2 = Re[k1]\n",
-    "        Im2 = Im[k1]\n",
-    "        C = tf.cos(alpha)\n",
-    "        S = tf.sin(alpha)\n",
-    "        m = C * Re1 - S * Im1\n",
-    "        n = S * Re1 + C * Im1\n",
-    "        Re[k1] = Re2 + m\n",
-    "        Im[k1] = Im2 + n\n",
-    "        Re[k2] = Re2 - m\n",
-    "        Im[k2] = Im2 - n\n",
+    "        def fft_kernel(indices):\n",
+    "            i = indices[0]\n",
+    "            k1, k2 = getIndexPair(i, it)\n",
+    "            k3 = (k1 & ((1 << it) - 1)) * (1 << (it_num - it))\n",
+    "            alpha = - 2 * np.pi * tf.float(k3) / tf.float(N)\n",
+    "            Re1 = Re[k2]\n",
+    "            Im1 = Im[k2]\n",
+    "            Re2 = Re[k1]\n",
+    "            Im2 = Im[k1]\n",
+    "            C = tf.cos(alpha)\n",
+    "            S = tf.sin(alpha)\n",
+    "            m = C * Re1 - S * Im1\n",
+    "            n = S * Re1 + C * Im1\n",
+    "            Re[k1] = Re2 + m\n",
+    "            Im[k1] = Im2 + n\n",
+    "            Re[k2] = Re2 - m\n",
+    "            Im[k2] = Im2 - n\n",
+    "        tf.kernel([N/2], fft_kernel)\n",
     "\n",
     "    tf.loop(fft_iteration, 1, it_num+1, 1)\n",
     "\n",
