Working algorithmic operations
+ added more advanced optimizations

--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -9,16 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "QRDecomposition:\n",
-      "  Kernel count: 8\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 386\n",
-      "  IR Compile time: 1.468200 ms\n",
-      "  Compiler time: 1338.116455 ms\n",
-      "\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "No common parent found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     Q[j, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m A[j, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m R[n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [Q, R]\n\u001b[1;32m---> 69\u001b[0m qr \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQRDecomposition\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: No common parent found"
      ]
     }
    ],
@@ -73,37 +75,20 @@
     "    m, n = A.shape\n",
     "    Q = tf.zeros([m, n])\n",
     "    R = tf.zeros([n, n])\n",
-    "\n",
     "    j = tf.index(0, [m])\n",
     "\n",
     "    def loop_body(i):\n",
-    "        norm2 = tf.zeros([1], tf.float32)\n",
-    "        def loop_body1(it):\n",
-    "            norm2.set(norm2 + A[it, i] ** 2)\n",
-    "        tf.loop(loop_body1, 0, m, 1)\n",
-    "        R[i, i] = tf.sqrt(norm2)\n",
+    "        R[i, i] = tf.norm(A[j, i])\n",
     "        Q[j, i] = A[j, i] / R[i, i]\n",
-    "        \n",
-    "        t, = tf.index_grid([i+1], [n])\n",
-    "        dotprod = tf.zeros(t.shape, tf.float32)\n",
-    "        def loop_body2(it):\n",
-    "            dotprod.set(dotprod + Q[it, i] * A[it, t])\n",
-    "        tf.loop(loop_body2, 0, m, 1)\n",
-    "        R[i, t] = dotprod\n",
-    "        \n",
-    "        p, k = tf.index_grid([0, i+1], [m, n])\n",
-    "        A[p, k] -= Q[p, i] * R[i, k]\n",
     "\n",
-    "        #p, k = tf.index_grid([0, i+1], [m, n])\n",
-    "        #R[i, t] = (Q[p, i] * A[p, k]).sum(axis=0) #TODO: implement sum reduction\n",
+    "        p, k = tf.index_grid([0, i + 1], [m, n])\n",
+    "        t, = tf.index_grid([i+1], [n])\n",
+    "        R[i, t] = tf.sum(Q[p, i] * A[p, k], axis=0)\n",
+    "        A[p, k] -= Q[p, i] * R[i, k]\n",
     "\n",
     "    tf.loop(loop_body, 0, n-1, 1)\n",
     "\n",
-    "    norm2 = tf.zeros([1], tf.float32)\n",
-    "    def loop_body1(it):\n",
-    "        norm2.set(norm2 + A[it, n-1] ** 2)\n",
-    "    tf.loop(loop_body1, 0, m, 1)\n",
-    "    R[n-1, n-1] = tf.sqrt(norm2)\n",
+    "    R[n-1, n-1] = tf.norm(A[j, n-1])\n",
     "    Q[j, n-1] = A[j, n-1] / R[n-1, n-1]\n",
     "\n",
     "    return [Q, R]\n",
@@ -113,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,20 +107,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.4196749845665633e-16\n",
-      "Error using TensorFrost: 1.7463660958911132e-07\n",
+      "Error: 1.4686870114880517e-16\n",
+      "Error using TensorFrost: 1.473572403332277e-07\n",
       "Q:\n",
-      " [[ 0.12900747 -0.04633267  0.85354614  0.49868265  0.06312579]\n",
-      " [ 0.10285251  0.70631176 -0.15278302  0.3730224  -0.57276213]\n",
-      " [ 0.8699651  -0.30220303 -0.01054917 -0.19219196 -0.3387996 ]\n",
-      " [ 0.4263036   0.1968207  -0.35251665  0.42409173  0.6894963 ]\n",
-      " [ 0.18494472  0.6073811   0.35176292 -0.6287911   0.2788697 ]]\n",
+      " [[ 0.59719115 -0.20963228  0.5872611  -0.27012587 -0.42611438]\n",
+      " [ 0.09662561  0.5911799  -0.06833504  0.5370069  -0.59002006]\n",
+      " [ 0.28360906  0.47443348  0.45918897  0.21260762  0.66213495]\n",
+      " [ 0.36185166 -0.5774531  -0.15089278  0.70275533  0.1377597 ]\n",
+      " [ 0.6501196   0.219138   -0.64562505 -0.31557667  0.1135895 ]]\n",
       "R:\n",
-      " [[0.7926238  1.3643625  1.2382593  0.69185907 0.9429792 ]\n",
-      " [0.         1.165894   0.6241264  0.31904197 0.7199794 ]\n",
-      " [0.         0.         0.90213925 0.46822688 0.49117544]\n",
-      " [0.         0.         0.         0.2116255  0.7114116 ]\n",
-      " [0.         0.         0.         0.         0.4332226 ]]\n"
+      " [[ 1.3671392   1.0887116   1.0798173   1.362275    0.88334846]\n",
+      " [ 0.          0.4051053   0.34498546  0.33760527 -0.19620542]\n",
+      " [ 0.          0.          0.6996289   0.22130297  0.04256443]\n",
+      " [ 0.          0.          0.          0.15314572  0.73374885]\n",
+      " [ 0.          0.          0.          0.          0.31238165]]\n"
      ]
     }
    ],
@@ -167,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for TensorFrost QR decomposition: 0.1770005226135254\n",
-      "Time for built-in NumPy QR decomposition: 3.8822364807128906\n",
-      "Error: 0.0012288705\n",
-      "Error using TensorFrost: 0.0018782484\n"
+      "Time for TensorFrost QR decomposition: 0.15400099754333496\n",
+      "Time for built-in NumPy QR decomposition: 3.8292949199676514\n",
+      "Error: 0.0012286016\n",
+      "Error using TensorFrost: 0.0018778603\n"
      ]
     }
    ],
